# my_first_repository

./: min.cpp  test.cpp
src/: CMakeLists.txt  min.h  test.cpp
src/include/: CMakeLists.txt  add.cpp  min.cpp  show.cpp  show.h
